# pyunlocode

./: .gitignore  LICENSE  README.md  __init__.py  defines.py  parser.py  pyproject.toml  pyunlocode.py  setup.py
csv/: 2014-2 UNLOCODE CodeListPart1.csv  2014-2 UNLOCODE CodeListPart2.csv  2014-2 UNLOCODE CodeListPart3.csv  2015-1 SubdivisionCodes.csv  2015-1 UNLOCODE CodeListPart1.csv  2015-1 UNLOCODE CodeListPart2.csv  2015-1 UNLOCODE CodeListPart3.csv
pyunlocode/: __init__.py  init_db.py  parser.py
pyunlocode/csv/: 2016-1 SubdivisionCodes.csv  2016-1 UNLOCODE CodeListPart1.csv  2016-1 UNLOCODE CodeListPart2.csv  2016-1 UNLOCODE CodeListPart3.csv
